--- a/app/src/main/res/layout/style_container.xml
+++ b/app/src/main/res/layout/style_container.xml
@@ -1,10 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#101217">
+
+    <ImageButton
+        android:id="@+id/styleThemePlaceholder"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/editor_light_circle"
+        android:clickable="false"
+        android:elevation="6dp"
+        android:src="@drawable/editor_inner_accent_circle"
+        app:tint="#2A2A2A"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/styleColorPlaceholder"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/editor_light_circle"
+        android:layout_marginStart="8dp"
+        android:clickable="false"
+        android:elevation="6dp"
+        android:src="@drawable/editor_inner_accent_circle"
+        app:tint="@color/colorAccent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/styleThemePlaceholder"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/styleDivider"
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:orientation="vertical"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/styleColorPlaceholder"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/styleLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/style_color"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/styleDivider"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/containerBG"
@@ -14,6 +63,7 @@
         android:layout_marginVertical="72dp"
         android:paddingBottom="32dp"
         android:background="@drawable/editor_container_background"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -812,7 +862,6 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
