--- a/app/src/main/res/layout/style_container.xml
+++ b/app/src/main/res/layout/style_container.xml
@@ -63,7 +63,7 @@
         android:layout_marginVertical="72dp"
         android:paddingBottom="32dp"
         android:background="@drawable/editor_container_background"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
