--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1198,6 +1198,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:animateLayoutChanges="true"
+        android:elevation="18dp"
         android:background="@drawable/editor_pill_background"
         android:paddingHorizontal="12dp"
         android:paddingVertical="8dp"
@@ -1257,12 +1258,10 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/containerBG"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="0dp"
-            android:layout_marginVertical="0dp"
             android:paddingBottom="32dp"
-            android:background="@drawable/editor_container_background"
+            android:background="@null"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -2073,6 +2072,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginVertical="8dp"
+        android:elevation="18dp"
         android:paddingVertical="8dp"
         android:paddingHorizontal="12dp"
         android:background="@drawable/editor_pill_background"
